Bug 1175765 - Start async-shutdown timer in GMPParent::CloseActive(). r=cpearce, a=lmandel